# RhodoShield

./: CMakeLists.txt  README.md  config.example.ini  platformio.ini  rapport.txt  sdkconfig.rhodoshield  tree.txt
components/actuator_manager/: CMakeLists.txt  actuator_manager.c
components/actuator_manager/include/: actuator_manager.h
components/bme280_manager/: CMakeLists.txt  bme280_manager.c  idf_component.yml
components/bme280_manager/include/: bme280_manager.h
components/http_api_manager/: CMakeLists.txt  http_api_manager.c
components/http_api_manager/include/: http_api_manager.h
components/moisture_calibration/: CMakeLists.txt  README.md  calibration.c  calibration.h
components/network_manager/: CMakeLists.txt  network_manager.c
components/sntp_manager/: CMakeLists.txt  sntp_manager.c
components/sntp_manager/include/: sntp_manager.h
components/soil_moisture/: soil_moisture.c
components/soil_moisture/include/: soil_moisture.h
components/wifi_manager/: CMakeLists.txt  idf_component.yml  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
data/: index.html
src/: main.c
